# workspace

./: CMakeLists.txt  README.md  generate_markers.py  plot_camrobot.py  plot_workspace.py  plot_workspace_robot_coords.py  plot_workspacecamcoord.py  test_volume_design.py
data/: intrinsic_params.yml  output.yaml  test_extrinsic.yaml  workspace.yaml  workspace_params_config.yaml  workspacenew.yaml
include/: workspace_definition.h
src/: workspace_definition.cpp  workspace_tool.cpp
